--- a/Patient.Api/Patient.Api.csproj
+++ b/Patient.Api/Patient.Api.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Patient.Application\Patient.Application.csproj" />
+  </ItemGroup>
+
 </Project>
