--- a/Patient.Application/Patient.Application.csproj
+++ b/Patient.Application/Patient.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Patient.Domain\Patient.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
