--- a/Patient.Infrastructure/Patient.Infrastructure.csproj
+++ b/Patient.Infrastructure/Patient.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Patient.Application\Patient.Application.csproj" />
+  </ItemGroup>
+
 </Project>
