Added some views, Created basic entities

--- a/Patient.Infrastructure/Patient.Infrastructure.csproj
+++ b/Patient.Infrastructure/Patient.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Patient.Application\Patient.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
