--- a/Patient.Domain/Patient.Domain.csproj
+++ b/Patient.Domain/Patient.Domain.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
