--- a/Patient.Application/Patient.Application.csproj
+++ b/Patient.Application/Patient.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Patient.Domain\Patient.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
