--- a/Patient.Api/Patient.Api.csproj
+++ b/Patient.Api/Patient.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Patient.Infrastructure\Patient.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
