--- a/Patient.Domain/Patient.Domain.csproj
+++ b/Patient.Domain/Patient.Domain.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Entities\MainEntities\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Extensions\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
