--- a/Patient/appsettings.Development.json
+++ b/Patient/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PatientDb": "Server=(localdb)\\mssqllocaldb;Database=PatientDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
