--- a/Patient.Api/Patient.Api.csproj
+++ b/Patient.Api/Patient.Api.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DoctorControllers\" />
     <Folder Include="Extensions\" />
+    <Folder Include="PatientControllers\" />
   </ItemGroup>
 
 </Project>
