--- a/Patient.Application/Patient.Application.csproj
+++ b/Patient.Application/Patient.Application.csproj
@@ -12,6 +12,11 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Reports\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
 
 </Project>
