--- a/Patient/Patient.csproj
+++ b/Patient/Patient.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MediatR" Version="12.4.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
