--- a/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
+++ b/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
@@ -16,4 +16,8 @@
     <Folder Include="PageControlls\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
