Token added to browser

--- a/Patient.Api/Patient.Api/appsettings.Development.json
+++ b/Patient.Api/Patient.Api/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "ds23128VNsb-dSAHDSBwj32213-DSacansj",
+    "Issuer": "Server",
+    "Audience": "User"
+
+  },
   "ConnectionStrings": {
     "PatientDb": "Server=(localdb)\\mssqllocaldb;Database=PatientDb;Trusted_Connection=True;"
   },
@@ -7,5 +13,39 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.ApplicationInsights"
+    ],
+    "MinimumLevel": {
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information"
+
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:dd-MM HH:mm:ss} {Level:u3}] |{SourceContext}| {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/PatientApiServer-.log",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+
+      }
+      
+
+
+    ]
   }
+
 }
