--- a/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
+++ b/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
