--- a/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
+++ b/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
@@ -10,12 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.8" />
     <PackageReference Include="Microsoft.JSInterop" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="PageControlls\" />
+    <Folder Include="Pages\Doctor\" />
   </ItemGroup>
 
   <ItemGroup>
