--- a/Patient.Application/Patient.Application.csproj
+++ b/Patient.Application/Patient.Application.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Reports\Queries\" />
-    <Folder Include="Users\Commands\Patients\" />
+    <Folder Include="Users\Commands\" />
     <Folder Include="Users\Queries\" />
   </ItemGroup>
 
