+ AddFiles to patient

--- a/Patient.Application/Patient.Application.csproj
+++ b/Patient.Application/Patient.Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="MedicalData\Queries\" />
     <Folder Include="Reports\Queries\" />
     <Folder Include="Users\Commands\" />
     <Folder Include="Users\Queries\" />
