--- a/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
+++ b/Patient.Api/Patient.Api.Client/Patient.Api.Client.csproj
@@ -12,11 +12,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.8" />
     <PackageReference Include="Microsoft.JSInterop" Version="8.0.8" />
+    <PackageReference Include="MudBlazor" Version="7.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="PageControlls\" />
   </ItemGroup>
 
   <ItemGroup>
