adjustments - added cancellationTokens to manage

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Patient.Api/Patient.Api/appsettings.json
+/Patient.Infrastructure/Migrations/PatientDbContextModelSnapshot.cs
+/Patient.Infrastructure/Migrations/20241009123943_newMigInitial.cs
