Working on azure state

--- a/Patient.Api/Patient.Api/appsettings.Development.json
+++ b/Patient.Api/Patient.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "PatientDb": "Server=(localdb)\\mssqllocaldb;Database=PatientDb;Trusted_Connection=True;"
+
   },
   "Logging": {
     "LogLevel": {
@@ -41,6 +42,12 @@
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
 
+      },
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+        }
       }
 
 
