adjustments in loggin, background, registration

--- a/Patient.Api/Patient.Api/appsettings.Development.json
+++ b/Patient.Api/Patient.Api/appsettings.Development.json
@@ -46,6 +46,7 @@
       {
         "Name": "ApplicationInsights",
         "Args": {
+          "connectionString": "InstrumentationKey=f0b7c0c0-f84e-444d-bcda-1c26f8d29a1c;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/;ApplicationId=caaea61c-a794-4da5-bf7b-4b6652ed305d",
           "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
         }
       }
